syntax = "proto3";

package mizer;

service SessionApi {
  rpc GetSession (SessionRequest) returns (stream Session) {}
  rpc JoinSession (ClientAnnouncement) returns (Session) {}
  rpc CloseProject (ProjectRequest) returns (ProjectResponse) {}
  rpc NewProject (ProjectRequest) returns (ProjectResponse) {}
  rpc OpenProject (OpenProjectRequest) returns (ProjectResponse) {}
  rpc SaveProject (ProjectRequest) returns (ProjectResponse) {}
}

message ProjectRequest {}
message OpenProjectRequest {
  string path = 1;
}
message ProjectResponse {}

message ClientAnnouncement {
  string name = 1;
}

message SessionRequest {}

message Session {
  repeated SessionDevice devices = 1;
}

message SessionDevice {
  string name = 1;
  repeated string ips = 2;
  DeviceClock clock = 3;
  double ping = 4;
}

message DeviceClock {
  bool master = 1;
  double drift = 2;
}
